tanks child class and vehicle win condition

--- a/Project/WorldRebalance/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Project/WorldRebalance/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,14 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCPP
+
+[/Script/OnlineSubsystemUtils.OnlinePIESettings]
+bOnlinePIEEnabled=False
++Logins=(Id="aaa",Type="aaa",TokenBytes=(231,223,173,191,239,223,173,222,239,0,0,0,12,11,0,0))
++Logins=(Id="bbb",Type="bbb",TokenBytes=(231,220,173,188,239,220,173,222,239,38,210,204,226,181,173,222))
++Logins=(Id="ccc",Type="ccc",TokenBytes=(231,221,173,189,239,221,173,222,239,0,0,0,12,11,0,0))
++Logins=(Id="ddd",Type="ddd",TokenBytes=(231,218,173,186,239,218,173,222,239,115,104,21,227,181,173,222))
++Logins=(Id="eee",Type="eee",TokenBytes=(231,219,173,187,239,219,173,222,239,0,0,0,13,11,0,0))
++Logins=(Id="fff",Type="fff",TokenBytes=(231,216,173,184,239,216,173,222,239,190,173,222,239,190,173,222))
++Logins=(Id="ggg",Type="ggg",TokenBytes=(231,217,173,185,239,217,173,222,239,0,0,0,0,0,0,0))
++Logins=(Id="hhh",Type="hhh",TokenBytes=(231,214,173,182,239,214,173,222,239,115,104,21,227,181,173,222))
+
