--- a/Project/WorldRebalance/Config/DefaultGame.ini
+++ b/Project/WorldRebalance/Config/DefaultGame.ini
@@ -107,9 +107,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/MainMenu/MainMenu")
-+MapsToCook=(FilePath="/Game/ThirdPerson/Maps/ThirdPersonMap")
-+MapsToCook=(FilePath="/Game/Map/Battle0")
-+MapsToCook=(FilePath="/Game/Map/Battle1")
++MapsToCook=(FilePath="/Game/Map/DriveTankTest")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
